[package]
name = "ipld_dag"
version = "0.0.1"
authors = ["Sunny G <sunny.gonna@gmail.com>"]
edition = "2018"

[dependencies]
cid = "0.3"
derive_more = "0.15"
futures = "0.1.27"
indexmap = "1.0"
integer-encoding = "1.0.7"
multibase = "0.6"
multicodec = "0.1"
multihash = "0.8"
serde = {version = "1.0", features = ["derive"]}
serde_bytes = "0.11"
serde_token = "0.0.2"
