[package]
name = "ipld_dag_json"
version = "0.0.1"
authors = ["Sunny G <sunny.gonna@gmail.com>"]
edition = "2018"

[dependencies]
cid = "0.3.0"
ipld_dag = {path = "../ipld_dag"}
serde = {version = "1.0.92", features = ["derive"]}
serde_json = {git = "https://github.com/sunny-g/json", branch = "master"}
base64 = "0.10.1"
base-x = "0.2.5"
multibase = "0.6.0"
indexmap = "1.0.2"
