[package]
name = "ipld_dag_json"
version = "0.0.1"
authors = ["Sunny G <sunny.gonna@gmail.com>"]
edition = "2018"

[dependencies]
delegate = "0.2.0"
ipld_dag = {path = "../ipld_dag"}
serde = "1.0"
serde_json = {git = "https://github.com/sunny-g/serde_json", branch = "master"}

[dev-dependencies]
serde_bytes = "0.11"
