[package]
name = "datalove-persona-core"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
# general
thiserror = { workspace = true, default-features = false }

# crypto, zk
borsh = { workspace = true, default-features = false, features = [
  "derive",
  "unstable__schema",
] }
digest = { workspace = true, default-features = false, features = [
  "core-api"
] }
ed25519-dalek = { workspace = true, default-features = false, features = [
  "digest",
] }
# merkle-log = { workspace = true, default-features = false, features = [
#   "borsh",
#   "digest",
# ] }
risc0-zkvm = { workspace = true, default-features = false, features = [
] }
sha2 = { workspace = true, default-features = false, features = [
] }
signature = { workspace = true, default-features = false, features = [
  "digest",
] }

[dev-dependencies]
datalove-persona-risc0 = { path = "../methods" }

[features]
default = []
std = [
  "borsh/std",
  "digest/std",
  "ed25519-dalek/std",
  # "merkle-log/std",
  # "onlyerror/std",
  # "pqc_kyber/std",
  "risc0-zkvm/std",
  "sha2/std",
  "signature/std",
]
# serde = [
#   "dep:serde",
#   "ed25519-dalek/serde",
#   "merkle-log/serde",
# ]
