[package]
name = "datalove-persona-core"
authors = { workspace = true }
version = { workspace = true }
edition = { workspace = true }

[dependencies]
# general
bytemuck = { workspace = true, default-features = false }
thiserror = { workspace = true, default-features = false }

# crypto, zk
borsh = { workspace = true, default-features = false, features = [
  "derive",
  "unstable__schema",
] }
digest = { workspace = true, default-features = false, features = [
  "core-api"
] }
ed25519-dalek = { workspace = true, default-features = false, features = [
  "digest",
  # "fast",
] }
hex = { workspace = true, default-features = false, features = [
  "alloc",
] }
# merkle-log = { workspace = true, default-features = false, features = [
#   "borsh",
#   "digest",
# ] }
risc0-zkp = { workspace = true, default-features = false, features = [
  # "std",
] }
risc0-zkvm = { workspace = true, default-features = false, features = [
  # "verify",
] }
sha2 = { workspace = true, default-features = false, features = [
] }
signature = { workspace = true, default-features = false, features = [
  "digest",
] }

[dev-dependencies]
anyhow = { workspace = true, default-features = false, features = ["std"] }
datalove-persona-core = { path = ".", features = ["std", "test"] }
datalove-persona-risc0 = { path = "../methods" }
ed25519-dalek = { workspace = true, default-features = false, features = [
  "rand_core",
  "std",
] }
rand = { workspace = true, default-features = false, features = ["std"] }
risc0-zkvm = { workspace = true, default-features = false, features = [
  "cuda", # TODO: remove
  "prove",
  # "verify",
  "std",
] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[features]
default = []
std = [
  "bytemuck/extern_crate_std",
  "borsh/std",
  "digest/std",
  "ed25519-dalek/std",
  "hex/std",
  # "merkle-log/std",
  # "onlyerror/std",
  # "pqc_kyber/std",
  "risc0-zkp/std",
  "risc0-zkvm/std",
  "sha2/std",
  "signature/std",
]
test = [] # enables test utilities
# serde = [
#   "dep:serde",
#   "ed25519-dalek/serde",
#   "merkle-log/serde",
# ]
