[workspace]

[package]
name = "zksm"
version = "0.0.1"
edition = "2021"
publish = false

[[bin]]
name = "zksm"
path = "main.rs"

[dependencies]
datalove-persona-core = { path = "../../core", default-features = false }
risc0-zkvm = { version = "0.20.0-alpha.1", default-features = false }

[features]
default = ["std"]
std = [
  "datalove-persona-core/std",
  "risc0-zkvm/std",
]

[patch.crates-io]
crypto-bigint = { git = "https://github.com/risc0/crypto-bigint", branch = "risczero" }
curve25519-dalek = { git = "https://github.com/risc0/curve25519-dalek", branch = "risczero" }
sha2 = { git = "https://github.com/risc0/rustcrypto-hashes", branch = "risczero" }

[profile.release]
# TODO: play with this
debug = 1

[profile.release.package.risc0-zkvm-methods-guest]
# Include debug symbols so we can test the profiler.
debug = 1
