[package]
name = "datalove-zome-core"
version = "0.0.1"
authors = ["Sunny G <sunny.gonna@gmail.com>"]
readme = "README.md"
edition = "2018"

[dependencies]
hdk = { git = "https://github.com/holochain/holochain-rust" , branch = "master" }
holochain_wasm_utils = { git = "https://github.com/holochain/holochain-rust" , branch = "master" }
datalove-core = { path = "../../../../core" }
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"
serde_json = "1.0"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
